--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flame_bloc: ^1.12.4
   equatable: ^2.0.7
   flutter_bloc: ^8.1.6
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
