--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.7
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
+  flame_audio: ^2.10.6
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +60,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
-    - assets/tiles/
-    - assets/audio/music/
-    - assets/audio/sfx/
+    - assets/audio/
 
 
   # The following line ensures that the Material Icons font is
